// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SessionCheck component matches last snapshot - default 1`] = `
<Connect(VersionCheck)>
  <LoginNavigator
    uriPrefix="internalRouting://"
  />
</Connect(VersionCheck)>
`;

exports[`SessionCheck component matches last snapshot - loading 1`] = `<Loading />`;

exports[`SessionCheck component matches last snapshot - loggedIn with a currentUser 1`] = `
<Connect(VersionCheck)>
  <View>
    <RootNavigator
      uriPrefix="internalRouting://"
    />
    <SocketListener />
  </View>
</Connect(VersionCheck)>
`;

exports[`SessionCheck component matches last snapshot - loggedIn without a currentUser 1`] = `<Loading />`;

exports[`SessionCheck component matches last snapshot - not loggedIn 1`] = `
<Connect(VersionCheck)>
  <LoginNavigator
    uriPrefix="internalRouting://"
  />
</Connect(VersionCheck)>
`;
